Update ingress for basic auth

--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -3,6 +3,10 @@ kind: Ingress
 metadata:
   name: ingress
   namespace: particular-platform-example
+  annotations:
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
 spec:
   rules:
   - http:
