--- a/kubernetes/servicepulse.deployment.yaml
+++ b/kubernetes/servicepulse.deployment.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ports:
   - port: 9090
-    name: servicepulse-pod
+    name: frontend
   clusterIP: None
   selector:
     app: particular-servicepulse
