--- a/kubernetes/servicecontrol-error.statefulset.yaml
+++ b/kubernetes/servicecontrol-error.statefulset.yaml
@@ -74,7 +74,7 @@ spec:
           image: particular/servicecontrol:latest
           imagePullPolicy: Always
           ports:
-          - name: error-http-api
+          - name: api
             containerPort: 33333
             protocol: TCP
           env:
@@ -96,7 +96,7 @@ spec:
             - name: TRANSPORTTYPE
               value: "RabbitMQ.QuorumConventionalRouting"
             - name: CONNECTIONSTRING
-              value: "Host=$(RABBITMQ_HOST);username=$(RABBITMQ_USERNAME);Password=$(RABBITMQ_PASSWORD)"
+              value: "Host=$(RABBITMQ_HOST);username=$(RABBITMQ_USERNAME);Password=$(RABBITMQ_PASSWORD);"
             - name: RAVENDB_CONNECTIONSTRING
               value: http://localhost:8080
             - name: SERVICECONTROL_REMOTEINSTANCES
@@ -107,7 +107,7 @@ spec:
           imagePullPolicy: Always
           restartPolicy: Always
           ports:
-          - name: ravendb-http-api
+          - name: ravendb-http
             containerPort: 8080
             protocol: TCP
           - name: ravendb-snmp
@@ -123,15 +123,24 @@ spec:
           image: particular/servicecontrol:latest
           args: ['--setup']
           env:
+            - name: RABBITMQ_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: rabbitmq-default-user
+                  key: host
+            - name: RABBITMQ_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: rabbitmq-default-user
+                  key: username
+            - name: RABBITMQ_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: rabbitmq-default-user
+                  key: password
             - name: TRANSPORTTYPE
-              valueFrom:
-                configMapKeyRef:
-                  name: transport-config 
-                  key: TRANSPORTTYPE
+              value: "RabbitMQ.QuorumConventionalRouting"
             - name: CONNECTIONSTRING
-              valueFrom:
-                configMapKeyRef:
-                  name: transport-config 
-                  key: CONNECTIONSTRING
+              value: "Host=$(RABBITMQ_HOST);username=$(RABBITMQ_USERNAME);Password=$(RABBITMQ_PASSWORD);"
             - name: RAVENDB_CONNECTIONSTRING
               value: http://localhost:8080
