--- a/docker-compose/compose.yml
+++ b/docker-compose/compose.yml
@@ -33,6 +33,7 @@ services:
       - "44444:44444"
     environment:
       RAVENDB_CONNECTIONSTRING: http://servicecontrol-db:8080
+      ServiceControlQueueAddress: Particular.ServiceControl
     command: --setup-and-run
     restart: unless-stopped
     depends_on:
