Check for audit being enabled

--- a/helm/templates/audit/serviceaccount.yaml
+++ b/helm/templates/audit/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.audit.serviceAccount.create -}}
+{{- if and .Values.audit.enabled .Values.audit.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
