Fixed cmd line arg

--- a/helm/templates/error/statefulset.yaml
+++ b/helm/templates/error/statefulset.yaml
@@ -52,7 +52,7 @@ spec:
           {{- end }}
           image: {{ include "particular.error.image" . }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          args: ["--setup-run"]
+          args: ["--setup-and-run"]
           env:
             - name: TRANSPORTTYPE
               value: {{ required "transport.type is required" .Values.transport.type | quote }}
