--- a/helm/templates/monitor/deployment.yaml
+++ b/helm/templates/monitor/deployment.yaml
@@ -37,7 +37,7 @@ spec:
         - name: servicecontrol-monitoring
           image: {{ include "particular.monitor.image" . }}
           imagePullPolicy: {{ $.Values.image.pullPolicy }}
-          args: ["--setup-run"]
+          args: ["--setup-and-run"]
           env:
             - name: TRANSPORTTYPE
               value: {{ required "transport.type is required" .Values.transport.type | quote }}
