--- a/helm/templates/audit/statefulset.yaml
+++ b/helm/templates/audit/statefulset.yaml
@@ -54,7 +54,7 @@ spec:
           {{- end }}
           image: {{ include "particular.audit.image" $ }}
           imagePullPolicy: {{ $.Values.image.pullPolicy }}
-          args: ["--setup-run"]
+          args: ["--setup-and-run"]
           env:
             - name: TRANSPORTTYPE
               value: {{ required "transport.type is required" $.Values.transport.type | quote }}
