--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 
 image:
+  registry: docker.io
   # This sets the global pull policy for images.
   pullPolicy: Always
 
