Set the readonlyFileSystem based on the license path

--- a/helm/templates/audit/statefulset.yaml
+++ b/helm/templates/audit/statefulset.yaml
@@ -48,10 +48,22 @@ spec:
       {{- end }}
       containers:
         - name: servicecontrol-audit
-          {{- with $.Values.audit.securityContext }}
           securityContext:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- if $.Values.audit.securityContext }}
+            {{- $securityContext := $.Values.audit.securityContext }}
+            {{- if $.Values.licenseData }}
+            {{- $_ := set $securityContext "readOnlyRootFilesystem" true }}
+            {{- else }}
+            {{- $_ := set $securityContext "readOnlyRootFilesystem" false }}
+            {{- end }}
+            {{- toYaml $securityContext | nindent 12 }}
+            {{- else }}
+            {{- if $.Values.licenseData }}
+            readOnlyRootFilesystem: true
+            {{- else }}
+            readOnlyRootFilesystem: false
+            {{- end }}
+            {{- end }}
           image: {{ include "particular.audit.image" $ }}
           imagePullPolicy: {{ $.Values.image.pullPolicy }}
           args: ["--setup-and-run"]
