--- a/helm/templates/error/statefulset.yaml
+++ b/helm/templates/error/statefulset.yaml
@@ -46,10 +46,22 @@ spec:
       {{- end }}
       containers:
         - name: servicecontrol-error
-          {{- with .Values.error.securityContext }}
           securityContext:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- if .Values.error.securityContext }}
+            {{- $securityContext := .Values.error.securityContext }}
+            {{- if .Values.licenseData }}
+            {{- $_ := set $securityContext "readOnlyRootFilesystem" true }}
+            {{- else }}
+            {{- $_ := set $securityContext "readOnlyRootFilesystem" false }}
+            {{- end }}
+            {{- toYaml $securityContext | nindent 12 }}
+            {{- else }}
+            {{- if .Values.licenseData }}
+            readOnlyRootFilesystem: true
+            {{- else }}
+            readOnlyRootFilesystem: false
+            {{- end }}
+            {{- end }}
           image: {{ include "particular.error.image" . }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args: ["--setup-and-run"]
