Switch to deployment

--- a/helm/templates/audit/service.yaml
+++ b/helm/templates/audit/service.yaml
@@ -20,6 +20,7 @@ spec:
       targetPort: 44444
   selector:
     {{- include "particular.audit.selectorLabels" $ | nindent 4 }}
+    app.kubernetes.io/instance-name: {{ $instance }}
 ---
 {{- end }}
 {{- end -}}
