--- a/helm/templates/error/deployment.yaml
+++ b/helm/templates/error/deployment.yaml
@@ -79,8 +79,10 @@ spec:
             - name: PARTICULARSOFTWARE_LICENSE
               value: {{ . | quote }}
             {{- end }}
+            {{- if .Values.error.auditInstances }}
             - name: SERVICECONTROL_REMOTEINSTANCES
               value: {{ include "particular.error.auditInstances" . | squote }}
+            {{- end }}  
           {{- with .Values.error.extraEnv }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
