--- a/kubernetes/servicecontrol-monitoring.deployment.yaml
+++ b/kubernetes/servicecontrol-monitoring.deployment.yaml
@@ -33,30 +33,7 @@ spec:
       containers:
         - name: servicecontrol-monitoring
           image: particular/servicecontrol-monitoring:latest
-          env:
-            - name: RABBITMQ_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: rabbitmq-default-user
-                  key: host
-            - name: RABBITMQ_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: rabbitmq-default-user
-                  key: username
-            - name: RABBITMQ_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: rabbitmq-default-user
-                  key: password
-            - name: TRANSPORTTYPE
-              value: "RabbitMQ.QuorumConventionalRouting"
-            - name: CONNECTIONSTRING
-              value: "Host=$(RABBITMQ_HOST);username=$(RABBITMQ_USERNAME);Password=$(RABBITMQ_PASSWORD);"
-      initContainers:
-        - name: init-servicecontrol-monitoring
-          image: particular/servicecontrol-monitoring:latest
-          args: ["--setup"]
+          args: ["--setup-and-run"]
           env:
             - name: RABBITMQ_HOST
               valueFrom:
