--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -231,8 +231,21 @@ error:
 audit:
   # This is to enable or disable the creation of audit instances.
   enabled: true
-  # This sets the number of audit instance to create.
-  instances: 1
+  # Suffixed instances with dedicated queues:
+  # instances:
+  # - suffix: "sales"
+  #   queue: "sales.audit"
+  # - suffix: "marketing"
+  #   queue: "marketing.audit"
+  #
+  # or a combination of default queue names and a custom one
+  # instances:
+  #   - suffix: "1"
+  #   - suffix: "2"
+  #   - suffix: "3"
+  #     queue: "my_custom_queuename" 
+  instances: 
+     - suffix: "1"
 
   image:
     # This is the image to use for the audit instances.
